# WkCocos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Android/: build.gradle  settings.gradle
Android/app/: build.gradle  proguard-rules.txt
Android/app/src/main/: AndroidManifest.xml
Android/google/play_apk_expansion/: local.properties  source.properties
Android/google/play_apk_expansion/downloader_library/: build.gradle  project.properties
Android/google/play_apk_expansion/zip_file/: build.gradle
Android/google/play_licensing/: local.properties  source.properties
Android/gradle/wrapper/: gradle-wrapper.properties
Android/jnibuild/: CMakeCache.txt  Makefile  WkCocos.cbp  cmake_install.cmake
Android/lib/: build.gradle  proguard-rules.pro
Android/lib/src/main/: AndroidManifest.xml
Classes/: AppDelegate.cpp  HelloWorldScene.cpp
Classes/App/: AdUI.cpp  AppDelegate.cpp  AppInterface.cpp  CMakeLists.txt  DocsListUI.cpp  DownloadUI.cpp  DownloadingUI.cpp  ErrorUI.cpp  GPGSManager.cpp  GPGameServicesUI.cpp  GameLogic.cpp  GameUI.cpp  HelloWorldScene.cpp  LoadingScene.cpp  LoadingUI.cpp  LogUI.cpp  MyOptions.cpp  MyPlayer.cpp  NavUI.cpp  PlayersListUI.cpp  PreloadUI.cpp  SavingScene.cpp  SavingUI.cpp  ShopUI.cpp  TestScene.cpp  TimerUI.cpp  WebUI.cpp
Classes/Lib/: Actor.cpp  CMakeLists.txt  Interface.cpp  Options.cpp  Player.cpp  Save.cpp  SaveManager.cpp  Scene.cpp  World.cpp
Classes/Lib/Action/: NodeAction.cpp  UIAction.cpp
Classes/Lib/App42/: Login.cpp  Setup.cpp
Classes/Lib/Download/: Download.cpp  Version.cpp
Classes/Lib/Download/Systems/: CurlDL.cpp  DLCchecking.cpp  DLClisting.cpp  DLvalidating.cpp  Error.cpp  MD5checking.cpp  ProgressUpdate.cpp
Classes/Lib/Helper/: GameLogic.cpp
Classes/Lib/Loading/: Download.cpp  LoadingManager.cpp  Preload.cpp
Classes/Lib/Loading/Systems/: CurlDL.cpp  CurlMultiDL.cpp  DLCchecking.cpp  DLClisting.cpp  DLvalidating.cpp  DataEval.cpp  Downloading.cpp  Error.cpp  Loading.cpp  MD5checking.cpp  ProgressUpdate.cpp
Classes/Lib/LocalData/: LocalDataManager.cpp
Classes/Lib/LocalData/Systems/: Error.cpp  JSONLoginID.cpp  JSONPlayerData.cpp  JSONReader.cpp  JSONWriter.cpp
Classes/Lib/OnlineData/: OnlineDataManager.cpp  RequestStatus.cpp
Classes/Lib/OnlineData/Comp/: OnlineData.cpp
Classes/Lib/OnlineData/Events/: Error.cpp
Classes/Lib/OnlineData/Systems/: Error.cpp  ProgressUpdate.cpp  Storage.cpp  Timer.cpp  User.cpp
Classes/Lib/Preload/: Preload.cpp
Classes/Lib/Preload/Systems/: ASyncLoading.cpp  DataEval.cpp  Error.cpp  Loading.cpp  ProgressUpdate.cpp  SyncLoading.cpp
Classes/Lib/PushNotifications/: PushNotifications.cpp
Classes/Lib/Shop/: Assets.cpp  Inventory.cpp  MuffinRushAssets.cpp  Shop.cpp  ShopAssets.cpp  ShopEventHandler.cpp
Classes/Lib/Shop/SOOMLA/: ShopAssets.cpp  ShopEventHandler.cpp
Classes/Lib/StrongBox/: StrongBox.cpp
Classes/Lib/Timer/: Timer.cpp
Classes/Lib/Timer/Systems/: Alarm.cpp  AlarmDestructor.cpp  AlarmRinger.cpp  Progressor.cpp  TimeUpdater.cpp
Classes/Lib/Utils/: CocosAppender.cpp  Crypto.cpp  GPGSManager.cpp  Logger.cpp  ToolBox.cpp  UUID.cpp  WkJniHelper.cpp  libb64.cpp  md5.c  md5.cpp  sha1.cpp
Classes/Lib/Utils/jni/: Utils.cpp
Classes/Lib/Utils/log/: logappender.cpp  loglevel.cpp  logstream.cpp  logstreambuf.cpp  nullstream.cpp  nullstreambuf.cpp
Classes/Lib/WebView/: UIWebView.cpp  UIWebViewImpl-android.cpp  UIWebViewImpl-ios.mm  UIWebViewImpl-linux.cpp  UIWebViewImpl-win32.cpp
IOS/lib/WkCocos/: wkcocos.h  wkcocos.m
IOS/lib/WkCocos.xcodeproj/: project.pbxproj
IOS/lib/WkCocosTests/: Info.plist
Include/WkCocos/: Actor.h  Interface.h  Options.h  Player.h  Save.h  SaveManager.h  Scene.h  WkCocos.h  World.h
Include/WkCocos/Action/: NodeAction.h  UIAction.h
Include/WkCocos/App42/: Login.h  Setup.h
Include/WkCocos/Backend/: Readme.txt
Include/WkCocos/Download/: Download.h  Version.h
Include/WkCocos/Download/Comp/: CurlDL.h  DataLoad.h  FileMD5.h  LoadFunc.h  ProgressValue.h
Include/WkCocos/Download/Events/: DownloadAdvised.h  DownloadOptions.h  Downloaded.h  Error.h
Include/WkCocos/Download/Systems/: CurlDL.h  DLCchecking.h  DLClisting.h  DLvalidating.h  Error.h  MD5checking.h  (+1 more)
Include/WkCocos/Helper/: GameLogic.h  Readme.txt
Include/WkCocos/Loading/: Download.h  LoadingManager.h  LoadingUI.h  Preload.h
Include/WkCocos/LocalData/: LocalDataManager.h
Include/WkCocos/OnlineData/: OnlineDataManager.h  RequestStatus.h
Include/WkCocos/Preload/: Preload.h
Include/WkCocos/PushNotifications/: PushNotifications.h
Include/WkCocos/Shop/: Assets.h  Inventory.h  MuffinRushAssets.h  Shop.h  ShopAssets.h  ShopEventHandler.h
Include/WkCocos/StrongBox/: StrongBox.h
Include/WkCocos/Timer/: Timer.h
Include/WkCocos/Utils/: CocosAppender.h  Crypto.h  GPGSManager.h  Logger.h  ToolBox.h  UUID.h  WkJniHelper.h
Include/WkCocos/WebView/: UIWebView-inl.h  UIWebView.h  UIWebViewImpl-ios.h  UIWebViewImpl-linux.h  UIWebViewImpl-win32.h
Include/WkCocos/internal/: Config.h
Include/WkCocosApp/: AdUI.h  AppDelegate.h  AppInterface.h  DocsListUI.h  DownloadUI.h  DownloadingUI.h  ErrorUI.h  GPGSManager.h  GPGameServicesUI.h  GameLogic.h  GameUI.h  HelloWorldScene.h  LoadingScene.h  LoadingUI.h  LogUI.h  MyOptions.h  MyPlayer.h  NavUI.h  PlayersListUI.h  PreloadUI.h  SavingScene.h  SavingUI.h  ShopUI.h  TestScene.h  TimerUI.h  WebUI.h
Resources/: LocalData.txt  manifest.json  web_sample.html
Resources/fonts/: Text.fnt
Tests/AutoTests/: Actor.cpp  Save.cpp  StrongBox.cpp  Version.cpp  autotest.cpp  main.cpp
Tests/linux/: main.cpp
Tests/win32/: main.cpp
depends/: cocos2d-wk.cmake
nginxDLC/: nginx
nginxDLC/conf/: nginx.conf
nginxDLC/html/: index.html  index_force_update.html
nginxDLC/html/v0.1.1/: manifest.json
nginxDLC/html/v0.1.3/: manifest.json
nginxDLC/html/v0.2.1/: manifest.json
nginxDLC/html/v0.2.43/: manifest.json
nginxDLC/html/v0.2.6/: manifest.json
nginxDLC/html/v0.3.15/: manifest.json
nginxDLC/html/v0.3.45/: manifest.json
nginxDLC/html/v0.3.53/: manifest.json
nginxDLC/html/v0.4.74/: manifest.json
(+230 files in other folders)
